added the ability to get, delete, edit and add a category
