# docs/swagger.yaml
@@ -14,6 +14,55 @@ definitions:
 info:
   contact: {}
 paths:
+  /category:
+    get:
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/entity.DictionaryEntry'
+            type: array
+      tags:
+      - категория
+    post:
+      parameters:
+      - description: категория
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/entity.DictionaryEntryDTO'
+      responses: {}
+      tags:
+      - категория
+  /category/{id}:
+    delete:
+      parameters:
+      - description: идентификатор
+        in: path
+        name: id
+        required: true
+        type: string
+      responses: {}
+      tags:
+      - категория
+    patch:
+      parameters:
+      - description: категория
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/entity.DictionaryEntryDTO'
+      - description: идентификатор
+        in: path
+        name: id
+        required: true
+        type: string
+      responses: {}
+      tags:
+      - категория
   /country:
     get:
       responses:
